--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,37 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+/*
+ * Copyright (c) 2020 The ZMK Contributors
+ *
+ * SPDX-License-Identifier: MIT
+ */
 
-# Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
+/* ========== НАСТРОЙКИ РАЗДЕЛЬНОЙ КЛАВИАТУРЫ (SPLIT) ========== */
+// Отключаем автоматическое создание BLE периферий (для проводного соединения)
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=n
+// Явно указываем, что левая половина является главной (центральной)
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+
+/* ========== НАСТРОЙКИ RGB ПОДСВЕТКИ (UNDERGLOW) ========== */
+// Раскомментируйте следующие две строки, чтобы включить RGB-подсветку
+// CONFIG_ZMK_RGB_UNDERGLOW=y
+// CONFIG_WS2812_STRIP=y
+
+// Количество светодиодов в ленте (для Corne обычно 6 или 12)
+// CONFIG_ZMK_RGB_UNDERGLOW_NUM_LEDS=12
+
+// Эффекты подсветки (можно выбрать один или несколько)
+// CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=y
+// CONFIG_ZMK_RGB_UNDERGLOW_BREATHE_START=y
+// CONFIG_ZMK_RGB_UNDERGLOW_SPECTRUM_START=y
+
+/* ========== НАСТРОЙКИ OLED-ДИСПЛЕЯ ========== */
+// Раскомментируйте следующую строку, чтобы включить OLED-дисплей
+// CONFIG_ZMK_DISPLAY=y
+
+/* ========== ПРОЧИЕ НАСТРОЙКИ ========== */
+// Увеличиваем время работы от батареи (включает глубокий сон)
+CONFIG_ZMK_SLEEP=y
+// Время бездействия до перехода в сон (в миллисекундах, 900000 = 15 минут)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+
+// Увеличиваем мощность передатчика Bluetooth (если используете беспроводное соединение)
+// CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
