--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,7 +1,5 @@
 # ========== НАСТРОЙКИ РАЗДЕЛЬНОЙ КЛАВИАТУРЫ (SPLIT) ==========
-# Отключаем автоматическое создание BLE периферий (для проводного соединения через TRRS)
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=n
-# Явно указываем, что левая половина является главной (центральной)
+# Указываем, что левая половина является главной (центральной) при проводном соединении
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
 # ========== ОБЩИЕ НАСТРОЙКИ КЛАВИАТУРЫ ==========
@@ -9,22 +7,3 @@ CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 CONFIG_ZMK_SLEEP=y
 # Время бездействия до перехода в сон (900000 мс = 15 минут)
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-
-# ========== НАСТРОЙКИ RGB ПОДСВЕТКИ (UNDERGLOW) ==========
-# Раскомментируйте следующие две строки, чтобы включить RGB-подсветку
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
-# Количество светодиодов в ленте (для Corne обычно 6 или 12)
-# CONFIG_ZMK_RGB_UNDERGLOW_NUM_LEDS=12
-# Эффекты подсветки (можно раскомментировать нужные)
-# CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=y
-# CONFIG_ZMK_RGB_UNDERGLOW_BREATHE_START=y
-# CONFIG_ZMK_RGB_UNDERGLOW_SPECTRUM_START=y
-
-# ========== НАСТРОЙКИ OLED-ДИСПЛЕЯ ==========
-# Раскомментируйте следующую строку, чтобы включить OLED-дисплей
-# CONFIG_ZMK_DISPLAY=y
-
-# ========== ДОПОЛНИТЕЛЬНЫЕ НАСТРОЙКИ BLUETOOTH ==========
-# Раскомментируйте для увеличения мощности передатчика Bluetooth
-# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
