--- a/build.yaml
+++ b/build.yaml
@@ -25,3 +25,5 @@ include:
     shield: corne_right
   - board: nice_nano
     shield: settings_reset
+  - board: nice_nano
+    shield: tester_pro_micro
