--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,9 +1,9 @@
 # ========== НАСТРОЙКИ РАЗДЕЛЬНОЙ КЛАВИАТУРЫ (SPLIT) ==========
 # Указываем, что левая половина является главной (центральной) при проводном соединении
-#CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
 # ========== ОБЩИЕ НАСТРОЙКИ КЛАВИАТУРЫ ==========
 # Включаем глубокий сон для экономии энергии
-#CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=y
 # Время бездействия до перехода в сон (900000 мс = 15 минут)
-#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
