--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,6 @@
 # ========== НАСТРОЙКИ РАЗДЕЛЬНОЙ КЛАВИАТУРЫ (SPLIT) ==========
 # Указываем, что левая половина является главной (центральной) при проводном соединении
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+# CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
 # ========== ОБЩИЕ НАСТРОЙКИ КЛАВИАТУРЫ ==========
 # Включаем глубокий сон для экономии энергии
