--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,3 +7,4 @@
 # CONFIG_ZMK_SLEEP=y
 # Время бездействия до перехода в сон (900000 мс = 15 минут)
 # CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_MACRO=y
