--- a/config/corne.conf
+++ b/config/corne.conf
@@ -8,3 +8,5 @@ CONFIG_ZMK_SLEEP=y
 # Время бездействия до перехода в сон (300000 мс = 5 минут)
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
 
+# ========== ОБЩИЕ НАСТРОЙКИ ДИСПЛЕЯ ==========
+CONFIG_ZMK_DISPLAY=y
