--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -1,5 +1,5 @@
 CONFIG_ZMK_DISPLAY=y
-
+CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=60000
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
