--- a/config/corne.conf
+++ b/config/corne.conf
@@ -10,3 +10,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
 
 # ========== ОБЩИЕ НАСТРОЙКИ ДИСПЛЕЯ ==========
 CONFIG_ZMK_DISPLAY=y
+
+# ======== ЗАЩИТА ОТ ДРЕБЕЗГА КОНТАКТОВ ========
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
